k8s/analytics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: toogle-master
spec:
  selector:
    app: analytics-service
  ports:
    - protocol: TCP
      port: 8005
      targetPort: 8005
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: toogle-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
      - name: analytics-service
        image: 112719111297.dkr.ecr.us-east-1.amazonaws.com/analytics-service:latest
        ports:
        - containerPort: 8005
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 8005
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health
            port: 8005
          initialDelaySeconds: 10
          periodSeconds: 10
