k8s/evaluation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service
  namespace: toogle-master
spec:
  selector:
    app: evaluation-service
  ports:
    - protocol: TCP
      port: 8004
      targetPort: 8004
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluation-service
  namespace: toogle-master
spec:
  replicas: 2
  selector:
    matchLabels:
      app: evaluation-service
  template:
    metadata:
      labels:
        app: evaluation-service
    spec:
      containers:
      - name: evaluation-service
        image: <ACCOUNT_ID>.dkr.ecr.us-east-1.amazonaws.com/evaluation-service:latest
        ports:
        - containerPort: 8004
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 8004
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8004
          initialDelaySeconds: 5
          periodSeconds: 5
